--- a/weblog/Template/about.html
+++ b/weblog/Template/about.html
@@ -8,39 +8,37 @@
     <title>About Us</title>
 </head>
 <body>
-  <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-        <div class="container-fluid">
-          <h3>Group Five</h3>
-          <button class="navbar-toggler" type="button"
-                  data-mdb-toggle="collapse" data-mdb-target="#navbarColor02"
-                  aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
+<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+    <div class="container-fluid">
+        <h3>Group Five</h3>
+        <button class="navbar-toggle" type="button" data-mdb-toggle="collapse" data-mdb-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
             <i class="fas fa-bars"></i>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarColor02">
+        </button>
+        <div class="collapse navbar-collapse" id="navbarColor02">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item active">
-                <a class="nav-link" aria-current="page" href="home.html">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Posts</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Admin</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="about.html">About US</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="contact.html">Contact Us</a>
-              </li>
+                <li class="nav-item active">
+                    <a class="nav-link" aria-current="page" href="home.html">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="posts.html">Posts</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Admin</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="about.html">About US</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="contact.html">Contact Us</a>
+                </li>
             </ul>
-          </div>
-          <ul class="nav navbar-nav navbar-right">
-              <li><a href="signup.html" class="bg-primary"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
-              <li><a href="login.html" class="bg-primary"><span class="glyphicon glyphicon-log-in" ></span> Login</a></li>
-          </ul>
         </div>
-      </nav>
+        <ul class="nav navbar-nav navbar-right">
+            <li><a href="signup.html" class="bg-primary"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
+            <li><a href="login.html" class="bg-primary"><span class="glyphicon glyphicon-log-in" ></span> Login</a></li>
+        </ul>
+    </div>
+</nav>
 <div class="about-section" style="text-align:center">
   <h1>About Us Page</h1>
   <p>Some text about who we are and what we do.</p>
