--- a/weblog/Template/contact.html
+++ b/weblog/Template/contact.html
@@ -7,43 +7,41 @@
     <link rel="stylesheet" href="https://mdbcdn.b-cdn.net/wp-content/themes/mdbootstrap4/docs-app/css/dist/mdb5/standard/core.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
 </head>
-	<body>
-	  <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-        <div class="container-fluid">
-          <h3>Group Five</h3>
-          <button class="navbar-toggler" type="button"
-                  data-mdb-toggle="collapse" data-mdb-target="#navbarColor02"
-                  aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
-            <i class="fas fa-bars"></i>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarColor02">
+<body>
+<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+    <div class="container-fluid">
+        <h3>Group Five</h3>
+        <button class="navbar-toggle" type="button" data-mdb-toggle="collapse" data-mdb-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
+			<i class="fas fa-bars"></i>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarColor02">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item active">
-                <a class="nav-link" aria-current="page" href="home.html">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Posts</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Admin</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="about.html">About US</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="contact.html">Contact Us</a>
-              </li>
+                <li class="nav-item active">
+                    <a class="nav-link" aria-current="page" href="home.html">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="posts.html">Posts</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Admin</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="about.html">About US</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="contact.html">Contact Us</a>
+                </li>
             </ul>
-          </div>
-          <ul class="nav navbar-nav navbar-right">
-              <li><a href="signup.html" class="bg-primary"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
-              <li><a href="login.html" class="bg-primary"><span class="glyphicon glyphicon-log-in" ></span> Login</a></li>
-          </ul>
         </div>
-      </nav>
-	<section class="ftco-section">
-		<div class="container" style="padding-top: 7%">
-			<div class="row justify-content-center">
+        <ul class="nav navbar-nav navbar-right">
+            <li><a href="signup.html" class="bg-primary"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
+            <li><a href="login.html" class="bg-primary"><span class="glyphicon glyphicon-log-in" ></span> Login</a></li>
+        </ul>
+    </div>
+</nav>
+<section class="ftco-section">
+	<div class="container" style="padding-top: 7%">
+		<div class="row justify-content-center">
 			</div>
 			<div class="row justify-content-center">
 				<div class="col-lg-10 col-md-12">
@@ -104,7 +102,7 @@
 				</div>
 			</div>
 		</div>
-		</div>
-	</section>
-	</body>
+	</div>
+</section>
+</body>
 </html>
