--- a/weblog/Template/signup.html
+++ b/weblog/Template/signup.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>LogIn</title>
+    <title>SignUp</title>
     <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
 	<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
 	<script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
@@ -13,7 +13,6 @@
 		h2 {
 		  margin-top: 2px;
 		  margin-bottom: 2px;
-		  text-align: center;
 		}
 
 		.container { max-width: 360px;
@@ -40,17 +39,24 @@
 </head>
 
 <body>
+
+
+<!------ Include the above in your HEAD tag ---------->
+
     <div class="container">
 		<div class="row">
 			<div class="panel panel-primary">
 				<div class="panel-body">
 					<form method="POST" action="#" role="form">
 						<div class="form-group">
-							<h2>Log In</h2>
+							<h2>Create account</h2>
 						</div>
-
 						<div class="form-group">
-							<label class="control-label" for="signupEmail">Email Address</label>
+							<label class="control-label" for="signupName">Your name</label>
+							<input id="signupName" type="text" maxlength="50" class="form-control">
+						</div>
+						<div class="form-group">
+							<label class="control-label" for="signupEmail">Email</label>
 							<input id="signupEmail" type="email" maxlength="50" class="form-control">
 						</div>
 
@@ -58,29 +64,22 @@
 							<label class="control-label" for="signupPassword">Password</label>
 							<input id="signupPassword" type="password" maxlength="25" class="form-control" placeholder="at least 8 characters" length="40">
 						</div>
-
 						<div class="form-group">
-							<button id="signupSubmit" type="submit" class="btn btn-info btn-block">Log In</button>
+							<label class="control-label" for="signupPasswordagain">Password again</label>
+							<input id="signupPasswordagain" type="password" maxlength="25" class="form-control">
+						</div>
+						<div class="form-group">
+							<button id="signupSubmit" type="submit" class="btn btn-info btn-block">Create your account</button>
 						</div>
 <!--						<p class="form-group">By creating an account, you agree to our <a href="#">Terms of Use</a> and our <a href="#">Privacy Policy</a>.</p>-->
 						<hr>
-						<p></p>Don't have an account? <a href="signup.html">Sign Up</a></p>
+						<p></p>Already have an account? <a href="login.html">Sign in</a>
+						<p>Return <a href="home.html">Home</a> </p>
 					</form>
 				</div>
 			</div>
 		</div>
 	</div>
-<!--<script>-->
-<!--	// When the user clicks anywhere outside of the modal, close it-->
-<!--window.onclick = function(event) {-->
-<!--  if (event.target == container) {-->
-<!--    container.style.display = "none";-->
-<!--  }-->
-<!--}-->
-<!--</script>-->
+
 </body>
 </html>
-
-
-
-
