card for dashboard added

--- a/weblog/Template/admin/admin.html
+++ b/weblog/Template/admin/admin.html
@@ -34,8 +34,10 @@
             left: 0;
             height: 100%;
             width: 2px;
-            background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.5) 50%, rgba(0, 0, 0, 0) 100%);
+            background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(0, 123, 255, 1) 50%, rgba(0, 0, 0, 0) 100%);
+            /*background: linear-gradient(90deg, rgba(172,167,255,1) 0%, rgba(0,123,255,1) 4%, rgba(0,123,255,1) 96%, rgba(172,167,255,1) 100%);*/
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+
         }
 
 
@@ -110,9 +112,43 @@
                 <!--                <h1>test</h1>-->
                 <!--                <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>-->
                 <!--                <h1>wrgwgw</h1>-->
-                <div class="line"></div>
-                <h1>Content Title</h1><br><br><br><br><br><br><br>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                <!--                <div class="line"></div>-->
+                <!--                <h1>Content Title</h1><br><br><br><br><br><br><br>-->
+                <!--                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>-->
+                <!--                <div class="card" style="width: 18rem;">-->
+                <!--&lt;!&ndash;                    <img class="card-img-top" src="..." alt="Card image cap">&ndash;&gt;-->
+                <!--                    <div class="card-body">-->
+                <!--                        <h5 class="card-title">All post:</h5>-->
+                <!--&lt;!&ndash;                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of&ndash;&gt;-->
+                <!--&lt;!&ndash;                            the card's content.</p>&ndash;&gt;-->
+                <!--                        <h3 id="num_of_posts">200</h3>-->
+                <!--                        <a href="#" class="btn btn-info">all posts</a>-->
+                <!--                    </div>-->
+                <!--                </div>-->
+                <div class="row" style="margin-top: 10px">
+                    <div class="col-sm-6">
+                        <div class="card bg-Secondary w-50" style="margin-right: 10px">
+                            <div class="card-body">
+                                <h5 class="card-title text-info">Total posts:</h5>
+                                <!--                                <p class="card-text"> 200</p>-->
+<!--                                <h2>&emsp;200 <h6> &nbsp;posts</h6></h2>-->
+                                <h1 id="posts-num" class="text-center" style="margin-bottom: 0;">214301</h1><h6 class="text-center">&emsp;posts</h6><br style="margin-bottom: 0">
+                                <a href="#" class="btn btn-info float-right " style="min-width: 45px;">&emsp;&emsp;&emsp;&emsp;&emsp;&nbsp;&nbsp;all posts&emsp;&emsp;&emsp;&emsp;&emsp;&nbsp;&nbsp;</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-6">
+                        <div class="card bg-Secondary w-50">
+                            <div class="card-body">
+                                <h5 class="card-title text-info">Total posts:</h5>
+                                <!--                                <p class="card-text"> 200</p>-->
+<!--                                <h2>&emsp;200 <h6> &nbsp;posts</h6></h2>-->
+                                <h1 id="posts-num2" class="text-center" style="margin-bottom: 0;">214301</h1><h6 class="text-center">&emsp;posts</h6><br style="margin-bottom: 0">
+                                <a href="#" class="btn btn-info float-right " style="min-width: 45px;">&emsp;&emsp;&emsp;&emsp;&emsp;&nbsp;&nbsp;all posts&emsp;&emsp;&emsp;&emsp;&emsp;&nbsp;&nbsp;</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
