--- a/weblog/Template/admin/admin.html
+++ b/weblog/Template/admin/admin.html
@@ -17,6 +17,7 @@
             background-color: #007bff !important;
             border-top-right-radius: 15px;
             border-bottom-right-radius: 15px;
+            /*padding-right: 10px;*/
         }
 
         .my_content {
@@ -25,21 +26,55 @@
 
         .content {
             position: relative;
-            padding-left: 20px;
+            padding-left: 0;
+            padding-right: 25px;
         }
 
-        .line {
-            position: absolute;
-            top: 0;
-            left: 0;
-            height: 100%;
-            width: 2px;
-            background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(0, 123, 255, 1) 50%, rgba(0, 0, 0, 0) 100%);
-            /*background: linear-gradient(90deg, rgba(172,167,255,1) 0%, rgba(0,123,255,1) 4%, rgba(0,123,255,1) 96%, rgba(172,167,255,1) 100%);*/
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+        /*.line {*/
+        /*    position: absolute;*/
+        /*    top: 0;*/
+        /*    left: 0;*/
+        /*    height: 100%;*/
+        /*    width: 2px;*/
+        /*    background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(0, 123, 255, 1) 50%, rgba(0, 0, 0, 0) 100%);*/
+        /*    !*background: linear-gradient(90deg, rgba(172,167,255,1) 0%, rgba(0,123,255,1) 4%, rgba(0,123,255,1) 96%, rgba(172,167,255,1) 100%);*!*/
+        /*    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);*/
+
+        /*}*/
+
+        .center {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            /*height: 100vh;*/
+            /*width: 100px;*/
+            /*background-color: #fff;*/
+            /*border-left: 10px solid;*/
+            /*border-image: linear-gradient(to bottom, #4c4c4c, rgba(76, 76, 76, 0)) 1 100%;*/
 
         }
 
+        /*.content::before {*/
+        /*    margin-right: 10px;*/
+        /*    content: "";*/
+        /*    position: absolute;*/
+        /*    top: 0;*/
+        /*    bottom: 0;*/
+        /*    left: -10px;*/
+        /*    width: 3px;*/
+        /*    background: linear-gradient(to bottom, #3e61b3, rgba(76, 76, 76, 0));*/
+        /*    !*border-radius: 20%;*!*/
+        /*}*/
+
+        /*.content:after {*/
+        /*    content: "";*/
+        /*    position: absolute;*/
+        /*    bottom: 0;*/
+        /*    left: -10px;*/
+        /*    width: 10px;*/
+        /*    height: 20px;*/
+        /*    background: linear-gradient(to bottom, rgba(76, 76, 76, 0), #4c4c4c);*/
+        /*}*/
 
     </style>
 
@@ -101,50 +136,67 @@
                             </div>
                         </div>
                     </li>
-                    <!--                    <li>-->
-                    <!--                        <div class="my_content"></div>-->
-                    <!--                    </li>-->
                 </ul>
             </div>
         </nav>
         <div class="col-md-10 col-sm-12 ">
-            <div class="content">
-                <!--                <h1>test</h1>-->
-                <!--                <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>-->
-                <!--                <h1>wrgwgw</h1>-->
-                <!--                <div class="line"></div>-->
-                <!--                <h1>Content Title</h1><br><br><br><br><br><br><br>-->
-                <!--                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>-->
-                <!--                <div class="card" style="width: 18rem;">-->
-                <!--&lt;!&ndash;                    <img class="card-img-top" src="..." alt="Card image cap">&ndash;&gt;-->
-                <!--                    <div class="card-body">-->
-                <!--                        <h5 class="card-title">All post:</h5>-->
-                <!--&lt;!&ndash;                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of&ndash;&gt;-->
-                <!--&lt;!&ndash;                            the card's content.</p>&ndash;&gt;-->
-                <!--                        <h3 id="num_of_posts">200</h3>-->
-                <!--                        <a href="#" class="btn btn-info">all posts</a>-->
-                <!--                    </div>-->
-                <!--                </div>-->
+            <div class="content ">
                 <div class="row" style="margin-top: 10px">
-                    <div class="col-sm-6">
-                        <div class="card bg-Secondary w-50" style="margin-right: 10px">
+                    <div class="col-sm-3 col-md-3">
+                        <div class="card bg-Secondary w-100" style="margin-right: 10px">
                             <div class="card-body">
                                 <h5 class="card-title text-info">Total posts:</h5>
                                 <!--                                <p class="card-text"> 200</p>-->
-<!--                                <h2>&emsp;200 <h6> &nbsp;posts</h6></h2>-->
-                                <h1 id="posts-num" class="text-center" style="margin-bottom: 0;">214301</h1><h6 class="text-center">&emsp;posts</h6><br style="margin-bottom: 0">
-                                <a href="#" class="btn btn-info float-right " style="min-width: 45px;">&emsp;&emsp;&emsp;&emsp;&emsp;&nbsp;&nbsp;all posts&emsp;&emsp;&emsp;&emsp;&emsp;&nbsp;&nbsp;</a>
+                                <!--                                <h2>&emsp;200 <h6> &nbsp;posts</h6></h2>-->
+                                <h1 id="posts-num" class="text-center" style="margin-bottom: 0;">214301</h1><h6
+                                    class="text-center">&emsp;posts</h6><br style="margin-bottom: 0">
+                                <!--                                <a href="#" class="btn btn-info float-right " style="min-width: 45px;">&emsp;&emsp;&emsp;&emsp;&emsp;&nbsp;&nbsp;all posts&emsp;&emsp;&emsp;&emsp;&emsp;&nbsp;&nbsp;</a>-->
+                                <div class="center">
+                                    <a href="#" class="btn btn-info float-right " style="width: 100%">all posts</a>
+                                </div>
                             </div>
                         </div>
                     </div>
-                    <div class="col-sm-6">
-                        <div class="card bg-Secondary w-50">
+                    <div class="col-sm-3 col-md-3">
+                        <div class="card bg-Secondary w-100">
                             <div class="card-body">
                                 <h5 class="card-title text-info">Total posts:</h5>
                                 <!--                                <p class="card-text"> 200</p>-->
-<!--                                <h2>&emsp;200 <h6> &nbsp;posts</h6></h2>-->
-                                <h1 id="posts-num2" class="text-center" style="margin-bottom: 0;">214301</h1><h6 class="text-center">&emsp;posts</h6><br style="margin-bottom: 0">
-                                <a href="#" class="btn btn-info float-right " style="min-width: 45px;">&emsp;&emsp;&emsp;&emsp;&emsp;&nbsp;&nbsp;all posts&emsp;&emsp;&emsp;&emsp;&emsp;&nbsp;&nbsp;</a>
+                                <!--                                <h2>&emsp;200 <h6> &nbsp;posts</h6></h2>-->
+                                <h1 id="comments-num" class="text-center" style="margin-bottom: 0;">3453</h1><h6
+                                    class="text-center">&emsp;comments</h6><br style="margin-bottom: 0">
+                                <div class="center">
+                                    <a href="#" class="btn btn-info float-right " style="width: 100%">unsubmitted
+                                        comments</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-3 col-md-3">
+                        <div class="card bg-Secondary w-100">
+                            <div class="card-body">
+                                <h5 class="card-title text-info">Total posts:</h5>
+                                <!--                                <p class="card-text"> 200</p>-->
+                                <!--                                <h2>&emsp;200 <h6> &nbsp;posts</h6></h2>-->
+                                <h1 id="contactUs-num" class="text-center" style="margin-bottom: 0;">54786</h1><h6
+                                    class="text-center">&emsp;usesr messages</h6><br style="margin-bottom: 0">
+                                <div class="center">
+                                    <a href="#" class="btn btn-info float-right " style="width: 100%">messages</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-3 col-md-3">
+                        <div class="card bg-Secondary w-100">
+                            <div class="card-body">
+                                <h5 class="card-title text-info">Total posts:</h5>
+                                <!--                                <p class="card-text"> 200</p>-->
+                                <!--                                <h2>&emsp;200 <h6> &nbsp;posts</h6></h2>-->
+                                <h1 id="contactdveUs-num" class="text-center" style="margin-bottom: 0;">54786</h1><h6
+                                    class="text-center">&emsp;usesr messages</h6><br style="margin-bottom: 0">
+                                <div class="center">
+                                    <a href="#" class="btn btn-info float-right " style="width: 100%">messages</a>
+                                </div>
                             </div>
                         </div>
                     </div>
