admin page except profile done

--- a/weblog/Template/admin/admin.html
+++ b/weblog/Template/admin/admin.html
@@ -21,7 +21,7 @@
             /*padding-right: 10px;*/
         }
 
-        .nav_total{
+        .nav_total {
             background-color: #007bff !important;
             border-top-right-radius: 15px;
             border-bottom-right-radius: 15px;
@@ -153,15 +153,15 @@
                             Log out
                         </a>
                     </li>
-<!--                    <li class="nav-item">-->
-<!--                        <br><br><br>-->
-<!--                        <div class="row justify-content-center">-->
-<!--                            <div class="col-6">-->
-<!--                                <button class="btn btn-info btn-block">Logout</button>-->
-<!--                                <br>-->
-<!--                            </div>-->
-<!--                        </div>-->
-<!--                    </li>-->
+                    <!--                    <li class="nav-item">-->
+                    <!--                        <br><br><br>-->
+                    <!--                        <div class="row justify-content-center">-->
+                    <!--                            <div class="col-6">-->
+                    <!--                                <button class="btn btn-info btn-block">Logout</button>-->
+                    <!--                                <br>-->
+                    <!--                            </div>-->
+                    <!--                        </div>-->
+                    <!--                    </li>-->
                 </ul>
             </div>
         </nav>
@@ -174,7 +174,7 @@
                             <h1>Dashboard</h1>
                         </div>
                         <div class="col-md-4">
-                            <div class="d-flex align-items-center justify-content-end">
+                            <div class="d-flex align-items-center justify-content-end" style="padding-left: 580px">
                                 <b class="mb-0" id="admin-name">Ali Alizadeh</b>
                                 <img src="./photos/profile-photo.png" class="rounded-circle mr-2" width="60"
                                      height="60">
