other admin pages created

--- a/weblog/Template/admin/admin.html
+++ b/weblog/Template/admin/admin.html
@@ -17,7 +17,7 @@
             background-color: #007bff !important;
             border-top-right-radius: 15px;
             border-bottom-right-radius: 15px;
-
+            min-height: 260px;
             /*padding-right: 10px;*/
         }
 
@@ -25,6 +25,7 @@
             background-color: #007bff !important;
             border-top-right-radius: 15px;
             border-bottom-right-radius: 15px;
+            min-height: 260px;
         }
 
         .my_content {
@@ -127,7 +128,7 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link text-light" href="#">
-                            comments
+                            contact us messages
                         </a>
                     </li>
                     <li class="nav-item">
