minor changes on admin page card

--- a/weblog/Template/admin/admin.html
+++ b/weblog/Template/admin/admin.html
@@ -248,7 +248,7 @@
                 </div>
                 <div class="card" style="margin-top: 25px">
                     <div class="card-header">
-                        Notes for Admins
+                        Quote
                     </div>
                     <div class="card-body">
                         <blockquote class="blockquote mb-0">
