admin cards title change

--- a/weblog/Template/admin/admin.html
+++ b/weblog/Template/admin/admin.html
@@ -204,7 +204,7 @@
                     <div class="col-sm-3 col-md-3">
                         <div class="card bg-Secondary w-100">
                             <div class="card-body">
-                                <h5 class="card-title text-info">Total posts:</h5>
+                                <h5 class="card-title text-info">My posts:</h5>
                                 <!--                                <p class="card-text"> 200</p>-->
                                 <!--                                <h2>&emsp;200 <h6> &nbsp;posts</h6></h2>-->
                                 <h1 id="myPosts-num" class="text-center" style="margin-bottom: 0;">100</h1><h6
@@ -218,13 +218,13 @@
                     <div class="col-sm-3 col-md-3">
                         <div class="card bg-Secondary w-100">
                             <div class="card-body">
-                                <h5 class="card-title text-info">Total posts:</h5>
+                                <h5 class="card-title text-info">Unconfirmed comments:</h5>
                                 <!--                                <p class="card-text"> 200</p>-->
                                 <!--                                <h2>&emsp;200 <h6> &nbsp;posts</h6></h2>-->
                                 <h1 id="comments-num" class="text-center" style="margin-bottom: 0;">3453</h1><h6
                                     class="text-center">&emsp;comments</h6><br style="margin-bottom: 0">
                                 <div class="center">
-                                    <a href="#" class="btn btn-info float-right " style="width: 100%">unsubmitted
+                                    <a href="#" class="btn btn-info float-right " style="width: 100%">unconfirmed
                                         comments</a>
                                 </div>
                             </div>
@@ -233,7 +233,7 @@
                     <div class="col-sm-3 col-md-3">
                         <div class="card bg-Secondary w-100">
                             <div class="card-body">
-                                <h5 class="card-title text-info">Total posts:</h5>
+                                <h5 class="card-title text-info">Contact us messages:</h5>
                                 <!--                                <p class="card-text"> 200</p>-->
                                 <!--                                <h2>&emsp;200 <h6> &nbsp;posts</h6></h2>-->
                                 <h1 id="contactUs-num" class="text-center" style="margin-bottom: 0;">54786</h1><h6
