--- a/weblog/Template/admin/posts.html
+++ b/weblog/Template/admin/posts.html
@@ -169,7 +169,21 @@
         </nav>
         <div class="col-md-10 col-sm-12 ">
             <div class="content" style="margin-top: 30px">
-                <br>
+                <div class="container-fluid">
+                    <div class="row">
+                        <div class="col-md-8">
+                            <h1>Posts</h1>
+                        </div>
+                        <div class="col-md-4">
+                            <div class="d-flex align-items-center justify-content-end" style="padding-left: 580px">
+                                <b class="mb-0" id="admin-name">Ali Alizadeh</b>
+                                <img src="./photos/profile-photo.png" class="rounded-circle mr-2" width="60"
+                                     height="60">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
             </div>
         </div>
     </div>
