admin contact us messages page without messages

--- a/weblog/Template/admin/contactUs_messages.html
+++ b/weblog/Template/admin/contactUs_messages.html
@@ -25,8 +25,7 @@
             background-color: #007bff !important;
             border-top-right-radius: 15px;
             border-bottom-right-radius: 15px;
-            min-width: 260px;
-
+            min-height: 260px;
         }
 
         .my_content {
@@ -118,12 +117,12 @@
                         <br>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link  text-light" href="#">
+                        <a class="nav-link text-light" href="#">
                             Dashboard
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link  text-light" href="#">
+                        <a class="nav-link text-light" href="#">
                             Posts
                         </a>
                     </li>
@@ -169,10 +168,11 @@
         </nav>
         <div class="col-md-10 col-sm-12 ">
             <div class="content" style="margin-top: 30px">
+                <!--                <h1 class="text-info">Dashboard</h1>-->
                 <div class="container-fluid">
                     <div class="row">
                         <div class="col-md-8">
-                            <h1>Contact us messages</h1>
+                            <h1>Dashboard</h1>
                         </div>
                         <div class="col-md-4">
                             <div class="d-flex align-items-center justify-content-end" style="padding-left: 580px">
@@ -184,6 +184,30 @@
                     </div>
                 </div>
 
+<!--                write messages display here-->
+                <div class="card" style="margin-top: 25px">
+                    <div class="card-header">
+                        Quote
+                    </div>
+                    <div class="card-body">
+                        <blockquote class="blockquote mb-0">
+                            <p>Design is a funny word. Some people think design means how it looks. But of course, if
+                                you dig deeper, it's really how it works. The design of the Mac wasn't what it looked
+                                like, although that was part of it. Primarily, it was how it worked. To design something
+                                really well, you have to get it. You have to really grok what it's all about. It takes a
+                                passionate commitment to really thoroughly understand something, chew it up, not just
+                                quickly swallow it. Most people don't take the time to do that. Creativity is just
+                                connecting things. When you ask creative people how they did something, they feel a
+                                little guilty because they didn't really do it, they just saw something. It seemed
+                                obvious to them after a while. That's because they were able to connect experiences
+                                they've had and synthesize new things. And the reason they were able to do that was that
+                                they've had more experiences or they have thought more about their experiences than
+                                other people.</p>
+                            <footer class="blockquote-footer"><cite title="Source Title">Steve Jobs</cite>
+                            </footer>
+                        </blockquote>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
