other admin pages created like admin contact without desired content

--- a/weblog/Template/admin/unconfirmed_comments.html
+++ b/weblog/Template/admin/unconfirmed_comments.html
@@ -25,8 +25,7 @@
             background-color: #007bff !important;
             border-top-right-radius: 15px;
             border-bottom-right-radius: 15px;
-            min-width: 260px;
-
+            min-height: 260px;
         }
 
         .my_content {
@@ -118,12 +117,12 @@
                         <br>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link  text-light" href="#">
+                        <a class="nav-link text-light" href="#">
                             Dashboard
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-light" href="#">
+                        <a class="nav-link active text-light" href="#">
                             Posts
                         </a>
                     </li>
@@ -133,7 +132,7 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active  text-light" href="#">
+                        <a class="nav-link text-light" href="#">
                             unsubmitted comments
                         </a>
                     </li>
@@ -169,13 +168,14 @@
         </nav>
         <div class="col-md-10 col-sm-12 ">
             <div class="content" style="margin-top: 30px">
+                <!--                <h1 class="text-info">Dashboard</h1>-->
                 <div class="container-fluid">
                     <div class="row">
                         <div class="col-md-8">
-                            <h1>Unconfirmed messages</h1>
+                            <h1>Unconfirmed comments</h1>
                         </div>
                         <div class="col-md-4">
-                            <div class="d-flex align-items-center justify-content-end" style="padding-left: 580px">
+                            <div class="d-flex align-items-center justify-content-end" style="padding-left: 483px">
                                 <b class="mb-0" id="admin-name">Ali Alizadeh</b>
                                 <img src="./photos/profile-photo.png" class="rounded-circle mr-2" width="60"
                                      height="60">
@@ -184,6 +184,22 @@
                     </div>
                 </div>
 
+                <!--                write messages display here-->
+                <div class="card" style="margin-top: 25px">
+                    <div class="card-header">
+                        Quote
+                    </div>
+                    <div class="card-body">
+                        <blockquote class="blockquote mb-0">
+                            <p>Designing websites with the user in mind is not just a nice-to-have; it's a necessity.
+                                Users come to your site with a goal in mind, whether it's to find information, make a
+                                purchase, or connect with others. Your job as a designer is to understand these goals
+                                and create a site that makes it easy for users to achieve them.</p>
+                            <footer class="blockquote-footer"><cite title="Source Title">Jakob Nielsen</cite>
+                            </footer>
+                        </blockquote>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
