--- a/weblog/Template/admin/contactUs_messages.html
+++ b/weblog/Template/admin/contactUs_messages.html
@@ -172,10 +172,10 @@
                 <div class="container-fluid">
                     <div class="row">
                         <div class="col-md-8">
-                            <h1>Dashboard</h1>
+                            <h1>Contact us messages</h1>
                         </div>
                         <div class="col-md-4">
-                            <div class="d-flex align-items-center justify-content-end" style="padding-left: 580px">
+                            <div class="d-flex align-items-center justify-content-end" style="padding-left: 508px">
                                 <b class="mb-0" id="admin-name">Ali Alizadeh</b>
                                 <img src="./photos/profile-photo.png" class="rounded-circle mr-2" width="60"
                                      height="60">
