--- a/weblog/Template/admin/posts.html
+++ b/weblog/Template/admin/posts.html
@@ -25,8 +25,7 @@
             background-color: #007bff !important;
             border-top-right-radius: 15px;
             border-bottom-right-radius: 15px;
-            min-width: 260px;
-
+            min-height: 260px;
         }
 
         .my_content {
@@ -118,7 +117,7 @@
                         <br>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link  text-light" href="#">
+                        <a class="nav-link text-light" href="#">
                             Dashboard
                         </a>
                     </li>
@@ -169,13 +168,14 @@
         </nav>
         <div class="col-md-10 col-sm-12 ">
             <div class="content" style="margin-top: 30px">
+                <!--                <h1 class="text-info">Dashboard</h1>-->
                 <div class="container-fluid">
                     <div class="row">
                         <div class="col-md-8">
                             <h1>Posts</h1>
                         </div>
                         <div class="col-md-4">
-                            <div class="d-flex align-items-center justify-content-end" style="padding-left: 580px">
+                            <div class="d-flex align-items-center justify-content-end" style="padding-left: 621px">
                                 <b class="mb-0" id="admin-name">Ali Alizadeh</b>
                                 <img src="./photos/profile-photo.png" class="rounded-circle mr-2" width="60"
                                      height="60">
@@ -184,6 +184,22 @@
                     </div>
                 </div>
 
+                <!--                write messages display here-->
+                <div class="card" style="margin-top: 25px">
+                    <div class="card-header">
+                        Quote
+                    </div>
+                    <div class="card-body">
+                        <blockquote class="blockquote mb-0">
+                            <p>The web is more than a set of tools and technologies. It is a medium for people to
+                                interact, collaborate, and share knowledge and ideas. The social dimension of the web is
+                                what makes it so powerful. It is a platform for creativity and innovation, where people
+                                from all over the world can come together to create something new and exciting.</p>
+                            <footer class="blockquote-footer"><cite title="Source Title">Tim Berners-Lee</cite>
+                            </footer>
+                        </blockquote>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
