--- a/weblog/Template/admin/contactUs_messages.html
+++ b/weblog/Template/admin/contactUs_messages.html
@@ -1,3 +1,5 @@
+<!DOCTYPE html>
+<html lang="en">
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -184,7 +186,7 @@
                     </div>
                 </div>
 
-<!--                write messages display here-->
+                <!--                write messages display here-->
                 <div class="card" style="margin-top: 25px">
                     <div class="card-header">
                         Quote
@@ -213,3 +215,4 @@
     </div>
 </div>
 </body>
+</html>
