--- a/weblog/Template/admin/posts.html
+++ b/weblog/Template/admin/posts.html
@@ -1,3 +1,5 @@
+<!DOCTYPE html>
+<html lang="en">
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -205,3 +207,4 @@
     </div>
 </div>
 </body>
+</html>
