links for navbar and dashboard created

--- a/weblog/Template/admin/contactUs_messages.html
+++ b/weblog/Template/admin/contactUs_messages.html
@@ -119,35 +119,35 @@
                         <br>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-light" href="#">
+                        <a class="nav-link active text-light" href="admin.html">
                             Dashboard
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-light" href="#">
+                        <a class="nav-link text-light" href="posts.html">
                             Posts
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active text-light" href="#">
+                        <a class="nav-link text-light" href="contactUs_messages.html">
                             contact us messages
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-light" href="#">
-                            unsubmitted comments
+                        <a class="nav-link text-light" href="unconfirmed_comments.html">
+                            unconfirmed comments
                         </a>
                     </li>
                     <li class="nav-item">
                         <hr>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-light" href="#">
+                        <a class="nav-link text-light" href="../home.html">
                             Home page
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-light" href="#">
+                        <a class="nav-link text-light" href="../about.html">
                             About us page
                         </a>
                     </li>
